[gd_scene load_steps=8 format=3 uid="uid://b2j5lwkw7wfnv"]

[ext_resource type="Script" path="res://scripts/crop.gd" id="1_bpa7t"]
[ext_resource type="Texture2D" uid="uid://itwmvmp4kle8" path="res://images/crops/AllTreeSeedIII.png" id="2_e6fnc"]
[ext_resource type="Texture2D" uid="uid://d3d4xf5mcol5r" path="res://images/pokemon/caterpie.png" id="3_p2otm"]
[ext_resource type="PackedScene" uid="uid://ej67xagvlj7k" path="res://scenes/obstruction_area.tscn" id="4_wx8cr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhtmh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c2nqy"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b3xn7"]
radius = 43.0

[node name="Crop" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_bpa7t")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -35)
texture = ExtResource("2_e6fnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nhtmh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_c2nqy")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(41, -32)
texture = ExtResource("3_p2otm")

[node name="Area2D2" type="Area2D" parent="Sprite2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D2/Area2D2"]
shape = SubResource("CircleShape2D_b3xn7")

[node name="ObstructionArea" parent="." instance=ExtResource("4_wx8cr")]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Sprite2D2/Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Sprite2D2/Area2D2" to="." method="_on_area_2d_2_body_exited"]
